Fixes alignment of the select;

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -1899,6 +1899,7 @@ span.inline-notice {
   display: inline-block;
   height: 40px;
   position: relative;
+  vertical-align: middle;
 }
 .select::after {
   background-repeat: no-repeat;
@@ -1923,8 +1924,10 @@ span.inline-notice {
   background-color: #fff;
   border: 1px solid #c7c7c7;
   border-radius: 0;
+  font-family: "Market Sans", Arial, sans-serif;
   font-size: 16px;
   height: 40px;
+  margin-top: -1px;
   padding: 8px 30px 8px 16px;
   vertical-align: top;
 }
@@ -1936,10 +1939,14 @@ span.inline-notice {
   display: none;
 }
 .select.select--borderless > select {
+  background: transparent;
   border-color: transparent;
 }
 .select.select--borderless > select:focus {
   border: 1px solid #4295ff;
+}
+.select.select--small > select {
+  font-size: 14px;
 }
 .giant-text-2 {
   font-size: 2.25rem;
