--- a/src/less/select/ds6/select-base.less
+++ b/src/less/select/ds6/select-base.less
@@ -2,6 +2,7 @@
     display: inline-block;
     height: 40px;
     position: relative;
+    vertical-align: middle;
 
     &::after {
         .background-icon-base;
@@ -22,8 +23,10 @@
     background-color: #fff;
     border: 1px solid #c7c7c7;
     border-radius: 0;
+    font-family: @ds6-font-family-custom; // for some reason this needs to be explicitly set
     font-size: 16px;
     height: 40px;
+    margin-top: -1px; // account for the border
     padding: 8px 30px 8px 16px;
     vertical-align: top;
 
@@ -39,9 +42,14 @@
 }
 
 .select.select--borderless > select {
+    background: transparent;
     border-color: transparent;
 
     &:focus {
         border: 1px solid @ds6-color-p004-blue;
     }
+}
+
+.select.select--small > select {
+    font-size: 14px;
 }
